--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -34,6 +34,7 @@ python-dotenv==1.1.1
 python-jose==3.5.0
 python-multipart==0.0.20
 PyYAML==6.0.3
+rapidfuzz==3.10.1
 requests==2.32.5
 rsa==4.9.1
 six==1.17.0
