--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
         "start": "next start"
     },
     "dependencies": {
+        "@tanstack/react-query": "^5.90.3",
         "io-ts": "^2.2.22",
         "lucide-react": "^0.544.0",
         "motion": "^12.23.22",
