--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
         "start": "next start"
     },
     "dependencies": {
+        "@react-google-maps/api": "^2.20.7",
         "@tanstack/react-query": "^5.90.3",
         "io-ts": "^2.2.22",
         "lucide-react": "^0.544.0",
