--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,8 @@
     },
     "dependencies": {
         "@react-google-maps/api": "^2.20.7",
+        "@stripe/react-stripe-js": "^5.3.0",
+        "@stripe/stripe-js": "^8.2.0",
         "@tanstack/react-query": "^5.90.3",
         "io-ts": "^2.2.22",
         "lucide-react": "^0.544.0",
