Embeded AI image generation to assist the admin, providing images to the admin's liking.

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -47,4 +47,6 @@ urllib3==2.5.0
 uvicorn==0.37.0
 uvloop==0.21.0; platform_system != "Windows"
 watchfiles==1.1.0
-websockets==15.0.1
+websockets
+google-genai==0.3.0
+Pillow==11.0.0
