--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
         "next": "15.5.4",
         "react": "19.1.0",
         "react-dom": "19.1.0",
+        "react-hot-toast": "^2.6.0",
         "swiper": "^12.0.2"
     },
     "devDependencies": {
