--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -54,3 +54,5 @@ stripe==13.0.1
 google-maps-routing==0.7.0
 google-maps-routeoptimization==0.2.0
 geopy==2.4.1
+pytest-playwright==0.7.0
+playwright==1.52.0
